# Mpain

./: .gitignore  README.md
mpain/: CMakeLists.txt  TODO.txt  gamedata.json  machine.cpp  machine.h  main.cpp  recources.rc  state.h
mpain/Animation/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h
mpain/Configurations/: ButtonConfig.h  Configuration.h
mpain/Game/: Boss.cpp  Boss.h  GameData.cpp  GameData.h  Load.cpp  Load.h  Player.cpp  Player.h  PlayerAnimation.cpp  PlayerAnimation.h  stateGame.cpp  stateGame.h
mpain/Maps/: Map 1.json  Map 2.json  Map 3.json  Map 4.json  Map 5.json  Map 6.json  Map 7.json  Map 8.json  Map 9.json
mpain/Menu/: stateMenu.cpp  stateMenu.h
mpain/Scoreboard/: stateScoreboard.cpp  stateScoreboard.h
mpain/Settings/: settingsbutton.h  stateSettings.cpp  stateSettings.h
mpain/Sound/: LoadSound.cpp  LoadSound.h  Music.cpp  Music.h  SoundClip.cpp  SoundClip.h
